# nr-ops

./: .dockerignore  .env-template  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: .gitignore  mock_config.yaml
docker/: Dockerfile-prod  Dockerfile-prod-lambda  docker-compose-local.yml
docs/environment_variables/: README.md
lambda/: app.py
nr_ops/: main.py  main_lambda.py
nr_ops/config/: main_config.py
nr_ops/messages/: op_audit.py  op_depth.py  op_metadata.py  op_msg.py  time_step.py
nr_ops/ops/: base.py  op.py  op_collection.py  op_manager.py
nr_ops/ops/ops/connector_ops/hooks/: airflow_gcp_bigquery_hook.py  airflow_gcp_gcs_hook.py  airflow_gcp_hook.py  airflow_mysql_hook.py  airflow_postgres_hook.py  airflow_s3_hook.py  gcp_service_account_from_file.py  http_requests_from_env.py  python_counter.py  python_file.py  python_list.py  python_queue.py
nr_ops/ops/ops/connector_ops/interfaces/: base.py  counter.py  file.py  gcp_bigquery.py  gcp_gcs.py  google_ads.py  google_analytics.py  google_analytics_ga4.py  google_sheets.py  http.py  list.py  mysql.py  postgres.py  queue.py  s3.py
nr_ops/ops/ops/consumer_ops/: mock.py  put_list.py  sql_query.py
nr_ops/ops/ops/consumer_ops/braze/: generic_post_json_data_batched_async.py
nr_ops/ops/ops/consumer_ops/counter/: counter_put.py
nr_ops/ops/ops/consumer_ops/dbt/: dbt_run.py
nr_ops/ops/ops/consumer_ops/file/: file_put.py
nr_ops/ops/ops/consumer_ops/gcp_bigquery/: extract_table.py
nr_ops/ops/ops/consumer_ops/gcp_gcs/: delete_key.py  put_key.py
nr_ops/ops/ops/consumer_ops/google_ads/: upload_offline_conversion.py
nr_ops/ops/ops/consumer_ops/list/: list_put.py
nr_ops/ops/ops/consumer_ops/nr_ops/: postgres_create_etl_table.py
nr_ops/ops/ops/consumer_ops/pangres/: df_to_sql_db.py
nr_ops/ops/ops/consumer_ops/queue/: queue_put.py
nr_ops/ops/ops/consumer_ops/s3/: put_key.py
nr_ops/ops/ops/consumer_ops/shell/: shell_run.py
nr_ops/ops/ops/generator_ops/: batch.py  get_list.py  mock.py  skip_empty_input.py  sleep.py  sql_query.py
nr_ops/ops/ops/generator_ops/bigcom/: catalog_get_all_brands.py  catalog_get_all_categories.py  coupons_get_all_coupons.py  customers_get_all_customers.py  generic_compute_email_hashes.py  generic_remove_pii.py  orders_get_all_order_coupons.py  orders_get_all_order_products.py  (+5 more)
nr_ops/ops/ops/group_ops/: op_chain.py  op_chain_branch.py  op_fan_in.py  op_set.py
nr_ops/ops/ops/time_step_ops/: date_range.py  mock_ts.py  simple_start_offset.py  simple_ts.py
nr_ops/utils/eval/: custom_functions.py  eval_globals.py
nr_ops/utils/logging/: dict_config.py
nr_ops/utils/pandas/: log_df_info.py
nr_ops/utils/sqlalchemy/: dtype_lookup.py
(+54 files in other folders)
