[tool.poetry]
name = "nr-ops"
version = "0.9.0"
description = "An opinionated operator framework."
authors = ["Nitish Reddy Koripalli <nitish.k.reddy@gmail.com>"]


[tool.poetry.scripts]
nr-ops = "nr_ops.main:run"


[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pydantic = "==1.10.4"
pandas = "==1.5.3"
"ruamel.yaml" = "==0.17.21"

# System dependencies for mysql i.e. mysqlclient: sudo apt-get install python3-dev default-libmysqlclient-dev build-essential
apache-airflow = {version= "==2.5.1", extras = [
    "mysql",
    "postgres",
    "sqlite",
    "cncf.kubernetes",
    "amazon",
    "google",
    "http",
    "ftp",
    "sftp",
    "ssh",
    "imap",
    "common.sql"
]}

pangres = "==4.1.2"
Jinja2 = "==3.1.2"
google-analytics-data = "==0.16.1"
google-cloud-bigquery = "==3.7.0"
google-cloud-storage = "==1.44.0"
oauth2client = "==4.1.3"
zstandard = "==0.19.0"
backoff = "==2.2.1"
openpyxl = "==3.1.1"

# scikit-learn dependencies
scikit-learn = "==1.2.2"
scipy = "==1.10.1"
joblib = "==1.2.0"
threadpoolctl = "==3.1.0"

matplotlib = "==3.7.1"
dbt-core = "==1.4.5"
dbt-postgres = "==1.4.5"
google-ads = "==21.0.0"


[tool.poetry.extras]


[tool.poetry.dev-dependencies]
black = "==22.12.0"
isort = "==5.11.4"


[tool.black]
max-line-length = 88


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"